--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
 		"build": "npm run clear && npm run build:client && npm run build:server",
 		"dev:client": "cross-env NODE_ENV=development webpack-dev-server --config ./build/webpack.config.client.js",
 		"dev:server": "cross-env NODE_ENV=development node ./server/server.js",
-		"lint": "eslint --ext .js",
+		"lint": "eslint --ext .js /",
 		"precommit": "npm run lint"
 	},
 	"author": "zuozuomu",
