--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -1,16 +1,36 @@
 {
-  "parser": "babel-eslint",
-  "env":{
-    "browser": true,
-    "es6": true,
-    "node": true
-  },
-  "parserOptions": {
-    "ecmaVersion":6,
-    "sourceType": "module"
-  },
-  "extends": "airbnb",
-  "rules": {
-    "semi":"error"
-  }
+    "parser": "babel-eslint",
+    "extends": "airbnb",
+    "plugins": [
+        "react",
+        "jsx-a11y",
+        "import"
+    ],
+    "env": {
+        "browser": true
+    },
+    "rules": {
+        "react/destructuring-assignment": 0,
+        "react/jsx-indent": 0,
+        "react/jsx-tag-spacing": 0,
+        "no-tabs": 0,
+        "indent": 0,
+        "max-len": [
+            "error",
+            150
+        ],
+        "react/jsx-filename-extension": [
+            "error",
+            {
+                "extensions": [
+                    ".js",
+                    ".jsx"
+                ]
+            }
+        ],
+        "react/jsx-indent-props": [
+            "error",
+            4
+        ]
+    }
 }
