--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -31,6 +31,9 @@
         "react/jsx-indent-props": [
             "error",
             4
+        ],
+        "react/require-default-props": [
+            0
         ]
     }
 }
