--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -34,6 +34,12 @@
         ],
         "react/require-default-props": [
             0
+        ],
+        "class-methods-use-this": [
+            0
+        ],
+        "no-console": [
+            0
         ]
     }
 }
