--- a/package.json
+++ b/package.json
@@ -51,6 +51,8 @@
   "dependencies": {
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
+    "ejs": "^2.6.1",
+    "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "mobx": "^5.5.2",
@@ -58,9 +60,11 @@
     "prop-types": "^15.6.2",
     "query-string": "^6.4.0",
     "react": "^16.5.2",
+    "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.5.2",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
+    "serialize-javascript": "^1.6.1",
     "serve-favicon": "^2.5.0"
   }
 }
