--- a/.babelrc
+++ b/.babelrc
@@ -6,6 +6,14 @@
     ],
     "plugins": [
         "transform-decorators-legacy",
-        "react-hot-loader/babel"
+        "react-hot-loader/babel",
+        [
+            "import",
+            {
+                "libraryName": "antd",
+                "libraryDirectory": "es",
+                "style": "css"
+            }
+        ]
     ]
 }
