--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -40,6 +40,9 @@
         ],
         "no-console": [
             0
+        ],
+        "react/forbid-prop-types": [
+            0
         ]
     }
 }
