--- a/package.json
+++ b/package.json
@@ -21,11 +21,13 @@
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
     "babel-loader": "^7.1.0",
+    "babel-plugin-import": "^1.11.0",
+    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-env": "^1.7.0",
     "babel-preset-react": "^6.24.1",
-    "babel-plugin-transform-decorators-legacy": "^1.3.5",
     "babel-preset-stage-1": "^6.24.1",
     "cross-env": "^5.2.0",
+    "css-loader": "^2.1.1",
     "eslint": "^5.7.0",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-standard": "^12.0.0",
@@ -40,24 +42,24 @@
     "http-proxy-middleware": "^0.19.0",
     "husky": "^1.1.2",
     "memory-fs": "^0.4.1",
+    "mini-css-extract-plugin": "^0.5.0",
     "nodemon": "^1.18.4",
     "react-hot-loader": "^4.3.11",
     "rimraf": "^2.6.2",
+    "style-loader": "^0.23.1",
     "webpack": "^4.20.2",
     "webpack-cli": "^3.1.2",
     "webpack-dev-server": "^3.1.9",
     "webpack-merge": "^4.1.4"
   },
   "dependencies": {
-    "@material-ui/core": "^3.9.2",
-    "@material-ui/icons": "^3.0.2",
+    "antd": "^3.15.2",
     "axios": "^0.18.0",
     "body-parser": "^1.18.3",
     "ejs": "^2.6.1",
     "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
-    "jss": "^9.8.7",
     "mobx": "^5.5.2",
     "mobx-react": "^5.3.5",
     "prop-types": "^15.6.2",
@@ -66,7 +68,6 @@
     "react-async-bootstrapper": "^2.1.1",
     "react-dom": "^16.5.2",
     "react-helmet": "^5.2.0",
-    "react-jss": "^8.6.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
     "serialize-javascript": "^1.6.1",
