获取首页数据并渲染

--- a/client/.eslintrc
+++ b/client/.eslintrc
@@ -43,6 +43,9 @@
         ],
         "react/forbid-prop-types": [
             0
+        ],
+        "arrow-body-style": [
+            0
         ]
     }
 }
