--- a/package.json
+++ b/package.json
@@ -60,6 +60,8 @@
     "ejs-compiled-loader": "^1.1.0",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
+    "highlight.js": "^9.15.6",
+    "marked": "^0.6.1",
     "mobx": "^5.9.4",
     "mobx-react": "^5.4.3",
     "prop-types": "^15.6.2",
